--- a/www/examples/fragments/panel.left.html
+++ b/www/examples/fragments/panel.left.html
@@ -2,7 +2,8 @@
 			<div style="text-align: right" data-role="panel" id="leftpanel" data-display="overlay" data-position-fixed="true" >
 
 				<div class='nd2-sidepanel-profile wow fadeInDown'>
-					<img class='profile-background' src="//lorempixel.com/400/200/abstract/2/" />
+					<img class='profile-background'  src="img/bg.panel.left.jpg" />
+
 					<div class="row">
 						<div class='col-xs-4 center-xs'>
 							<div class='box'>
